rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x420_1999_PKCS7BodyPartType.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x420_1999_PKCS7BodyPartType.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 33, column 2]
    │
    │ 
 32 │  -- PKCS7 body part
 33 │  pkcs7-body-part EXTENDED-BODY-PART-TYPE ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 34 │    DATA  {ContentInfo
 35 │           IDENTIFIED BY  id-et-pkcs7}
 36 │  }
    │
────╯
