rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x435_1999_EDIMSAbstractService.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x435_1999_EDIMSAbstractService.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod edimsabstract_service {
    extern crate alloc;
    use super::edimsinformation_objects::*;
    use super::edimsobject_identifiers::{ID_PT_ORIGINATION, ID_PT_RECEPTION};
    use super::mtsabstract_service::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
