rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x435_1999_EDIMSFunctionalObjects.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x435_1999_EDIMSFunctionalObjects.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod edimsfunctional_objects {
    extern crate alloc;
    use super::edimsabstract_service::{ORIGINATION, RECEPTION};
    use super::edimsobject_identifiers::{ID_OT_EDIMG_USER, ID_OT_EDIMS};
    use super::mtsabstract_service::*;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
