rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x435_1999_EDIMSInformationObjects.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x435_1999_EDIMSInformationObjects.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 83, column 2]
    │
    │ 
 82 │  --	Extensions
 83 │  ExtensionField ::= SEQUENCE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 84 │    type         [0]  EDIM-EXTENSION.&id,
 85 │    criticality  [1]  Criticality DEFAULT FALSE,
 86 │    value        [2]  EDIM-EXTENSION.&Type DEFAULT NULL:NULL
 87 │  }
    │
────╯
