rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x435_1999_EDIMSObjectIdentifiers.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x435_1999_EDIMSObjectIdentifiers.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod edimsobject_identifiers {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ID(pub ObjectIdentifier);
    #[doc = " EDI Messaging"]
    pub static ID_EDIMS: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[2u32, 6u32, 7u32]).to_owned()));
}
