rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x435_1999_EDIMSUpperBounds.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x435_1999_EDIMSUpperBounds.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod edimsupper_bounds {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "\tUpper bounds"]
    pub static UB_APPLICATION_REFERENCE: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(14i128));
    pub static UB_AUTHORIZATION_INFORMATION: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(10i128));
    pub static UB_AUTHORIZATION_INFORMATION_QUALIFIER: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(2i128));
    pub static UB_COMMUNICATIONS_AGREEMENT_ID: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(35i128));
    pub static UB_EDI_APPLICATION_SECURITY_ELEMENTS: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(8191i128));
    pub static UB_EDI_ASSOCIATION_ASSIGNED_CODE: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(6i128));
    pub static UB_EDI_CONTROLLING_AGENCY: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(2i128));
    pub static UB_EDI_DOCUMENT_RELEASE: LazyLock<Integer> = LazyLock::new(|| Integer::from(3i128));
    pub static UB_EDI_DOCUMENT_VERSION: LazyLock<Integer> = LazyLock::new(|| Integer::from(3i128));
    pub static UB_EDI_MESSAGE_TYPE: LazyLock<Integer> = LazyLock::new(|| Integer::from(6i128));
    pub static UB_EDI_STRING_SIZE: LazyLock<Integer> = LazyLock::new(|| Integer::from(30i128));
    pub static UB_IDENTIFICATION_CODE: LazyLock<Integer> = LazyLock::new(|| Integer::from(35i128));
    #[doc = " please check this value reference name"]
    pub static UB_IDENTIFICATION_CODE_QUALIFIER: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(4i128));
    pub static UB_INTERCHANGE_CONTROL_REFERENCE: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(14i128));
    pub static UB_LOCAL_REFERENCE: LazyLock<Integer> = LazyLock::new(|| Integer::from(64i128));
    pub static UB_PROCESSING_PRIORITY_CODE: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(1i128));
    pub static UB_REASON_CODE: LazyLock<Integer> = LazyLock::new(|| Integer::from(32767i128));
    pub static UB_RECIPIENT_REFERENCE: LazyLock<Integer> = LazyLock::new(|| Integer::from(14i128));
    pub static UB_RECIPIENT_REFERENCE_QUALIFIER: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(2i128));
    pub static UB_RECIPIENTS: LazyLock<Integer> = LazyLock::new(|| Integer::from(32767i128));
    pub static UB_ROUTING_ADDRESS: LazyLock<Integer> = LazyLock::new(|| Integer::from(14i128));
    pub static UB_SYNTAX_IDENTIFIER: LazyLock<Integer> = LazyLock::new(|| Integer::from(4i128));
    pub static UB_SYNTAX_VERSION: LazyLock<Integer> = LazyLock::new(|| Integer::from(5i128));
}
