rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x462_1996_MhsAcctObjectIdentifiers.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x462_1996_MhsAcctObjectIdentifiers.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod mhs_acct_object_identifiers {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ID(pub ObjectIdentifier);
    #[doc = "  MHS management (definitive)"]
    pub static MHS_MANAGEMENT: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[2u32, 6u32, 9u32]).to_owned()));
}
